--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "dev": "concurrently --kill-others \"npm start\" \"browser-sync start -p http://localhost:5001/ --files views\"",
     "static-preview": "http-server --silent ./docs/",
     "ensure-docs": "path-exists docs && echo \"docs/ exists\" || grunt",
-    "test": "npm run ensure-docs && concurrently --kill-others \"npm run static-preview\" \"mocha\""
+    "test": "npm run ensure-docs && concurrently --kill-others \"npm run static-preview\" \"mocha\"",
+    "delete:remote": "git push origin --delete gh-pages && git fetch --all --prune",
+    "delete:docs": "git rm -r --cached docs",
+    "predelete": "npm run delete:remote",
+    "delete": "npm run delete:docs",
+    "deploy": "git subtree push --prefix docs origin gh-pages"
   },
   "dependencies": {
     "body-parser": "1.15.2",
